--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "webpack": "^4.14.0",
     "webpack-cli": "^3.0.8"
   },
-  "dependencies": {
-    "lodash": "^4.17.10"
-  }
+  "dependencies": {}
 }
 
